--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,10 +1,10 @@
 jdbc.driver=com.mysql.jdbc.Driver
 #数据库地址
-jdbc.url=jdbc:mysql://localhost:3306/test_maven?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/study?useUnicode=true&characterEncoding=utf8
 #用户名
 jdbc.username=root
 #密码
-jdbc.password=root
+jdbc.password=121658
 #最大连接数
 c3p0.maxPoolSize=30
 #最小连接数
